samples/_failures_safe/1761425098_27827b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76c6c0c5.c: In function ‘main’:
./samples/SAFE/__tmp_76c6c0c5.c:141: error: expected ‘{’ at end of input
